--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,14 @@
 # Site settings
-title: "Jingwei Zhao"
-email: "jz4807@nyu.edu"
-email2: "zhaojw@sjtu.edu.cn"
+title: "Xiaomei Wang"
+email: "xxx.sjtu.edu.cn"
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
-twitter_username: "zhao jingwei"
-github_username: "zhaojw1998"
+twitter_username: "Xiaomei Wang"
+github_username: "WangXiaoMei1"
 cv_username: "My CV"
-phone: "+86-186-9842-1903"
+phone: "+86-1xx-xxx-xxx"
 
 # Build settings
 markdown: kramdown
